--- a/index1.html
+++ b/index1.html
@@ -5,13 +5,16 @@
 <h2>Computer Code</h2>
 <p>Some programming code:</p>
 
+
 <code>
 x = 5;
 y = 6;
 z = x + y
 </code>
 
-<div></div>
+
+
+<div>sasASA</div>
 </body>
 </html>
 
